--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
       - 'v*'
 
 env:
-  FLUTTER_VERSION: '3.24.0'
+  FLUTTER_VERSION: '3.32.8'
 
 jobs:
   get-version:
@@ -95,6 +95,10 @@ jobs:
     needs: [get-version, check-release]
     if: needs.check-release.outputs.release-exists == 'false'
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
       - name: Create Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -297,6 +301,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [get-version, check-release]
     strategy:
+      fail-fast: false
       matrix:
         arch: [x64, arm64]
     steps:
@@ -489,6 +494,7 @@ jobs:
     runs-on: macos-latest
     needs: [get-version, check-release]
     strategy:
+      fail-fast: false
       matrix:
         arch: [x64, arm64]
     steps:
@@ -643,6 +649,10 @@ jobs:
     needs: [get-version, check-release, create-release, build-android, build-linux, build-windows, build-macos, build-ios]
     if: always()
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
